INTEL_BRC_BSW =			 	\
	hme_downscale_genx_0.g8b 	\
	hme_genx_0.g8b			\
	vp8_brc_init_genx_0.g8b		\
	vp8_brc_reset_genx_0.g8b	\
	vp8_brc_update_genx_0.g8b	\
	vp8_enc_genx_0.g8b		\
	vp8_enc_genx_1.g8b		\
	vp8_enc_genx_2.g8b		\
	vp8_intra_distortion_genx_0.g8b \
	vp8_mpu_genx_0.g8b		\
	vp8_tpu_genx_0.g8b

EXTRA_DIST = $(INTEL_BRC_BSW)

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = Makefile.in