INTEL_BRC_CNL =			 	\
	hme_downscale_genx_0.g10b 	\
	hme_genx_0.g10b			\
	vp8_brc_init_genx_0.g10b	\
	vp8_brc_reset_genx_0.g10b	\
	vp8_brc_update_genx_0.g10b	\
	vp8_enc_genx_0.g10b		\
	vp8_enc_genx_1.g10b		\
	vp8_enc_genx_2.g10b		\
	vp8_intra_distortion_genx_0.g10b\
	vp8_mpu_genx_0.g10b		\
	vp8_tpu_genx_0.g10b		\
	vp9_dys.g10b			\
	vp9_vdenc_hme_vp9_streamin.g10b

EXTRA_DIST = $(INTEL_BRC_CNL)

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = Makefile.in