INTEL_BRC_SKL =			 	\
	hme_downscale_genx_0.g9b 	\
	hme_genx_0.g9b			\
	vp8_brc_init_genx_0.g9b		\
	vp8_brc_reset_genx_0.g9b	\
	vp8_brc_update_genx_0.g9b	\
	vp8_enc_genx_0.g9b		\
	vp8_enc_genx_1.g9b		\
	vp8_enc_genx_2.g9b		\
	vp8_intra_distortion_genx_0.g9b \
	vp8_mpu_genx_0.g9b		\
	vp8_tpu_genx_0.g9b

EXTRA_DIST = $(INTEL_BRC_SKL)

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = Makefile.in