INTEL_ILDB_INC = \
	AVC_ILDB.inc				\
	Child_Undefs.inc			\
	ILDB_header.inc				\
	Root_Undefs.inc				\
	$(NULL)

INTEL_ILDB_ASM = \
	AVC_ILDB_Child_Field_UV.asm		\
	AVC_ILDB_Child_Field_Y.asm		\
	AVC_ILDB_Child_Mbaff_UV.asm		\
	AVC_ILDB_Child_Mbaff_Y.asm		\
	AVC_ILDB_Child_UV.asm			\
	AVC_ILDB_Child_Y.asm			\
	AVC_ILDB_Chroma_Core.asm		\
	AVC_ILDB_Chroma_Core_Mbaff.asm		\
	AVC_ILDB_CloseGateway.asm		\
	AVC_ILDB_Dep_Check.asm			\
	AVC_ILDB_Filter_Mbaff_UV_h.asm		\
	AVC_ILDB_Filter_Mbaff_UV_v.asm		\
	AVC_ILDB_Filter_Mbaff_Y_h.asm		\
	AVC_ILDB_Filter_Mbaff_Y_v.asm		\
	AVC_ILDB_Filter_UV_h.asm		\
	AVC_ILDB_Filter_UV_v.asm		\
	AVC_ILDB_Filter_Y_h.asm			\
	AVC_ILDB_Filter_Y_v.asm			\
	AVC_ILDB_ForwardMsg.asm			\
	AVC_ILDB_LumaThrdLimit.asm		\
	AVC_ILDB_Luma_Core.asm			\
	AVC_ILDB_Luma_Core_Mbaff.asm		\
	AVC_ILDB_OpenGateway.asm		\
	AVC_ILDB_Root_Field_UV.asm		\
	AVC_ILDB_Root_Field_Y.asm		\
	AVC_ILDB_Root_Mbaff_UV.asm		\
	AVC_ILDB_Root_Mbaff_Y.asm		\
	AVC_ILDB_Root_UV.asm			\
	AVC_ILDB_Root_Y.asm			\
	AVC_ILDB_Spawn.asm			\
	AVC_ILDB_SpawnChild.asm			\
	AVC_ILDB_SpawnChromaRoot.asm		\
	Load_ILDB_Cntrl_Data.asm		\
	Load_ILDB_Cntrl_Data_16DW.asm		\
	Load_ILDB_Cntrl_Data_22DW.asm		\
	Load_ILDB_Cntrl_Data_64DW.asm		\
	SetupVPKernel.asm			\
	TransposeNV12_16x16.asm			\
	TransposeNV12_4x16.asm			\
	Transpose_Cur_UV_2x8.asm		\
	Transpose_Cur_UV_8x8.asm		\
	Transpose_Cur_UV_Right_Most_2x8.asm	\
	Transpose_Cur_Y_16x16.asm		\
	Transpose_Cur_Y_4x16.asm		\
	Transpose_Cur_Y_Right_Most_4x16.asm	\
	Transpose_Left_UV_2x8.asm		\
	Transpose_Left_Y_4x16.asm		\
	loadNV12_16x16T.asm			\
	loadNV12_16x4.asm			\
	load_Cur_UV_8x8T.asm			\
	load_Cur_UV_8x8T_Mbaff.asm		\
	load_Cur_UV_Right_Most_2x8.asm		\
	load_Cur_Y_16x16T.asm			\
	load_Cur_Y_16x16T_Mbaff.asm		\
	load_Cur_Y_Right_Most_4x16.asm		\
	load_Left_UV_2x8T.asm			\
	load_Left_UV_2x8T_Mbaff.asm		\
	load_Left_Y_4x16T.asm			\
	load_Left_Y_4x16T_Mbaff.asm		\
	load_Top_UV_8x2.asm			\
	load_Top_UV_8x2_Mbaff.asm		\
	load_Top_Y_16x4.asm			\
	load_Top_Y_16x4_Mbaff.asm		\
	saveNV12_16x16.asm			\
	saveNV12_16x4.asm			\
	saveNV12_16x4T.asm			\
	save_Cur_UV_8x8.asm			\
	save_Cur_UV_8x8_Mbaff.asm		\
	save_Cur_Y_16x16.asm			\
	save_Cur_Y_16x16_Mbaff.asm		\
	save_Left_UV_8x2T.asm			\
	save_Left_UV_8x2T_Mbaff.asm		\
	save_Left_Y_16x4T.asm			\
	save_Left_Y_16x4T_Mbaff.asm		\
	save_Top_UV_8x2.asm			\
	save_Top_UV_8x2_Mbaff.asm		\
	save_Top_Y_16x4.asm			\
	save_Top_Y_16x4_Mbaff.asm		\
	writeURB.asm				\
	writeURB_UV_Child.asm			\
	writeURB_Y_Child.asm			\
	$(NULL)

EXTRA_DIST = \
	$(INTEL_ILDB_ASM)			\
	$(INTEL_ILDB_INC)			\
	$(NULL)

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = Makefile.in
